@@ -7,10 +7,14 @@ import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import jakarta.persistence.Query;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
@@ -18,35 +22,39 @@ public class SearchTourScheduleFullRepositoryImpl implements SearchTourScheduleF
 
     @PersistenceContext
     private final EntityManager entityManager;
+
     private final ObjectMapper objectMapper;
 
-    @Override
-    public List<SearchTourScheduleFullResponse> callStoredProcedure(Map<String, Object> filters) {
+    public Page<SearchTourScheduleFullResponse> callStoredProcedure(Map<String, Object> filters, Pageable pageable) {
+
         String sql = "SELECT result FROM sp_get_tour_schedule_json(CAST(:filters_json AS jsonb))";
         Query query = entityManager.createNativeQuery(sql);
 
         try {
             // Convertir los filtros a JSON
+            // Set pagination params in filters
+            filters.put("page", pageable.getOffset());
+            filters.put("size", pageable.getPageSize());
+
             String jsonFilters = objectMapper.writeValueAsString(filters);
 
             // Asignar el parámetro sin el ":" (solo se usa en la cadena SQL)
             query.setParameter("filters_json", jsonFilters);
-
-            // Ejecutar la consulta y obtener los resultados
             List<String> jsonResults = query.getResultList();
 
-            // Mapear los resultados JSON a objetos de respuesta
-            return jsonResults.stream().map(json -> {
+            List<SearchTourScheduleFullResponse> results = jsonResults.stream().map(json -> {
                 try {
                     return objectMapper.readValue(json, SearchTourScheduleFullResponse.class);
                 } catch (Exception e) {
-                    throw new RuntimeException("Error deserializing JSON to SearchTourScheduleFullResponse", e);
+                    throw new RuntimeException("Error deserializing result JSON", e);
                 }
-            }).toList();
+            }).collect(Collectors.toList());
+
+            // Return a Page object (Spring Data compliant)
+            return new PageImpl<>(results, pageable, results.size()); // Size can be adjusted if count is known
 
         } catch (Exception e) {
-            throw new RuntimeException("Error serializing filters to JSON", e);
+            throw new RuntimeException("Error executing stored procedure", e);
         }
     }
-
 }
